# X

./: .gitignore  .gitmodules  CMakeLists.txt  LICENSE  README.md  build_win.bat  cpp.hint
XE/launcher/: CMakeLists.txt  android_main.cpp  linux_main.cpp  windows_main.cpp
XE/source/: CMakeLists.txt  XE.h
XE/source/AST/: AST.h  ASTCodegen.h  ASTCompiler.h  ASTContext.cpp  ASTContext.h  ASTExecutor.cpp  ASTExecutor.h  ASTInfo.cpp  ASTInfo.h  ASTInstance.cpp  ASTInstance.h  ASTMetaClass.cpp  ASTMetaClass.h  ASTMetaEnum.cpp  ASTMetaEnum.h  ASTMetaFunction.cpp  ASTMetaFunction.h  ASTMetaMethod.cpp  ASTMetaMethod.h  ASTMetaProperty.cpp  ASTMetaProperty.h  ASTMetaVariable.cpp  ASTMetaVariable.h  ASTNode.cpp  ASTNode.h  ASTService.cpp  ASTService.h  ASTVisitor.cpp  ASTVisitor.h  Declare.h  SyntaxTree.cpp  SyntaxTree.h  Type.cpp  Type.h
XE/source/Audio/: Audio.h  AudioBuffer.cpp  AudioBuffer.h  AudioListener.cpp  AudioListener.h  AudioService.cpp  AudioService.h  AudioSource.cpp  AudioSource.h  Declare.h  Type.cpp  Type.h
XE/source/Base/: Base.h  Bitmap.cpp  Bitmap.h  ConcurrentArray.hpp  ConcurrentHashMap.hpp  ConcurrentHashSet.hpp  ConcurrentList.hpp  ConcurrentLruCache.hpp  ConcurrentPriorityQueue.hpp  ConcurrentQueue.hpp  Config.h  Declare.h  Delegate.hpp  Endian.h  Exception.cpp  Exception.h  Format.hpp  Graph.hpp  Leb128.hpp  MultiArray.hpp  NonCopyable.hpp  Singleton.cpp  Singleton.h  Span.hpp  String.cpp  String.h  Tree.hpp  Type.h
XE/source/Core/: Asset.cpp  Asset.h  AssetsService.cpp  AssetsService.h  AudioService.cpp  AudioService.h  CacheService.cpp  CacheService.h  Core.h  CoreFramework.cpp  CoreFramework.h  Declare.h  EventService.cpp  EventService.h  GraphicsService.cpp  GraphicsService.h  GraphicsServiceD3D11.cpp  GraphicsServiceD3D11.h  GraphicsServiceD3D12.cpp  GraphicsServiceD3D12.h  GraphicsServiceMetal.h  GraphicsServiceMetal.mm  GraphicsServiceNull.cpp  GraphicsServiceNull.h  GraphicsServiceOpenGL.cpp  GraphicsServiceOpenGL.h  GraphicsServiceOpenGLES.cpp  GraphicsServiceOpenGLES.h  GraphicsServiceVulkan.cpp  GraphicsServiceVulkan.h  GraphicsServiceWebGpu.cpp  GraphicsServiceWebGpu.h  InputService.cpp  InputService.h  LocalizationService.cpp  LocalizationService.h  NetworkService.cpp  NetworkService.h  Object.cpp  Object.h  (+19 more)
XE/source/GUI/: Action.cpp  Action.h  Canvas.cpp  Canvas.h  Controller.cpp  Controller.h  Declare.h  FlexLayout.cpp  FlexLayout.h  Font.cpp  Font.h  GUI.h  GUIService.cpp  GUIService.h  Image.cpp  Image.h  Label.cpp  Label.h  Layout.cpp  Layout.h  Model.cpp  Model.h  Slider.cpp  Slider.h  Type.cpp  Type.h  Widget.cpp  Widget.h  imconfig.h  imgui_impl.cpp  imgui_impl.h
XE/source/Input/: Declare.h  Input.h  InputItem.cpp  InputItem.h  InputService.cpp  InputStateItem.cpp  InputStateItem.h  InputStateMap.cpp  InputStateMap.h  Inputs.h  KeyboardInput.cpp  KeyboardInput.h  MouseInput.h  PadInput.h  TouchInput.cpp  TouchInput.h  Type.cpp  Type.h
XE/source/Inputs/: Declare.h  Input.cpp  InputService.cpp  InputService.h  InputState.cpp  InputState.h  InputStateMap.cpp  KeyboardInput.cpp  KeyboardInput.h  MouseInput.cpp  PadInput.cpp  Type.h
XE/source/Math/: AABB.cpp  AABB.h  Capsule.cpp  Capsule.h  Color.cpp  Color.h  ConvexHull.cpp  ConvexHull.h  Declare.h  Frustum.cpp  Frustum.h  Graph.hpp  HeightField.cpp  HeightField.h  Line.cpp  Line.h  Mat.cpp  Mat.h  Math.h  Mathf.cpp  Mathf.h  Mesh.cpp  Mesh.h  OBB.cpp  OBB.h  OCTree.hpp  Plane.cpp  Plane.h  QTree.hpp  Quat.cpp  Quat.h  Ray.cpp  Ray.h  Rect.cpp  Rect.h  SIMD.h  Sphere.cpp  Sphere.h  Transform.cpp  Transform.h  (+21 more)
XE/source/Memory/: AllocatorProxy.hpp  BuddyAllocator.hpp  Declare.h  DefaultMemoryResource.cpp  DefaultMemoryResource.h  FrameMemoryResource.cpp  FrameMemoryResource.h  GCMemoryResource.cpp  GCMemoryResource.h  GCObject.cpp  GCObject.h  GCPtr.hpp  MMapFile.cpp  MMapFile.h  MStream.hpp  Memory.h  MemoryResource.cpp  MemoryResource.h  ObjectMemoryResource.cpp  ObjectMemoryResource.h  PageAllocator.hpp  SlabAllocator.hpp  StackMemoryResource.hpp  Type.h
XE/source/Network/: Client.cpp  Client.h  Declare.h  HttpRequest.cpp  HttpRequest.h  HttpResponse.cpp  HttpResponse.h  Network.h  NetworkService.cpp  NetworkService.h  Server.cpp  Server.h  Type.cpp  Type.h
XE/source/Physics/: Declare.h  Physics.h  PhysicsService.cpp  PhysicsService.h  Type.h
XE/source/Reflect/: Archive.cpp  Archive.h  CXXMetaClass.hpp  CXXMetaEnum.hpp  CXXMetaEnumerator.hpp  CXXMetaFunction.hpp  CXXMetaMethod.hpp  CXXMetaProperty.hpp  CXXMetaVariable.hpp  Declare.h  InvokeStack.cpp  InvokeStack.h  MetaAttribute.cpp  MetaAttribute.h  MetaClass.cpp  MetaClass.h  MetaEnum.cpp  MetaEnum.h  MetaInfo.cpp  (+30 more)
XE/tests/: ArchiveTest.cpp  CMakeLists.txt  EncryptTest.cpp  ReflectTest.cpp  StringTest.cpp  UtilsTest.cpp  main.cpp
XS/launcher/: CMakeLists.txt  CloneDialog.cpp  CloneDialog.h  CloneDialog.ui  CreateDialog.cpp  CreateDialog.h  CreateDialog.ui  Global.h  ProjectListItem.cpp  ProjectListItem.h  ProjectListItem.ui  TemplateListItem.cpp  TemplateListItem.h  TemplateListItem.ui  WelcomeWindow.cpp  WelcomeWindow.h  WelcomeWindow.ui  main.cpp
XS/source/: AssetDatabase.cpp  AssetDatabase.h  AssetEditorWindow.cpp  AssetEditorWindow.h  AssetInspector.cpp  AssetInspector.h  AssetPipeline.cpp  AssetPipeline.h  AssetsDockWidget.cpp  AssetsDockWidget.h  AssetsDockWidget.ui  CMakeLists.txt  CoreFramework.cpp  CoreFramework.h  DockWidget.cpp  DockWidget.h  EditSceneDockWidget.cpp  EditSceneDockWidget.h  EditSceneDockWidget.ui  EditorWindow.cpp  EditorWindow.h  FramelessWindow.cpp  FramelessWindow.h  FramelessWindow.ui  GameSceneDockWidget.cpp  GameSceneDockWidget.h  GameSceneDockWidget.ui  Global.h  Inspector.cpp  Inspector.h  LoggerDockWidget.cpp  LoggerDockWidget.h  LoggerDockWidget.ui  MainWindow.cpp  MainWindow.h  MainWindow.ui  MenuBar.cpp  MenuBar.h  NodeWidget.cpp  NodeWidget.h  (+16 more)
XV/source/: AgentService.cpp  AgentService.h  CMakeLists.txt  Declare.h  GatewayService.cpp  GatewayService.h  RegistryService.cpp  RegistryService.h  RoomService.cpp  RoomService.h  Type.cpp  Type.h  WorldService.cpp  WorldService.h  XV.h
(+451 files in other folders)
